grammar.js
    program: $ => choice(
      seq(repeat($.use_directive), repeat($.decl)),
      $.inline_type,
      $.inline_content
    ),

    constant: $ => /[A-Z]\w*/,
    self: $ => "self",

    _no_parantheses_type: $ => choice(
      $.class_type,
      $.interface_type,
      $.alias_type,
      $.singleton_type,
      $._literal,
      $.union_type,
      $.intersection_type,
      $.optional_type,
      $.record_type,
      $.tuple_type,
      $.builtin_type,
      $.proc,
    ),

    _parantheses_type: $ => seq("(", $._no_parantheses_type, ")"),

    type: $ => choice(
      $._no_parantheses_type,
      $._parantheses_type,
    ),

    builtin_type: $ => choice(
      $.self,
      "instance",
      "class",
      "bool",
      "class",
      "untyped",
      "__todo__",
      "nil",
      "top",
      "bot",
      "void",
    ),

    class_type: $ => prec.right(seq($.class_name, optional($.type_arguments))),

    alias_type: $ => prec.right(seq($.alias_name, optional($.type_arguments))),

    singleton_type: $ => seq("singleton", "(", $.class_name, ")"),

    union_type: $ => prec.left(-1, seq(field("left", $.type), "|", field("right", $.type))),

    intersection_type: $ => prec.left(2, seq(field("left", $.type), "&", field("right", $.type))),

    optional_type: $ => prec(3, seq($.type, token.immediate("?"))),

    _record_type_single: $ => seq(optional("?"), field("key", alias($.identifier, $.record_key)), ":", field("value", $.type)),
    record_type: $ => seq("{", optional(seq(commaSep1($._record_type_single), optional(","))), "}"),

    class_name: $ => seq(optional($.namespace), $.constant),
    alias_name: $ => seq(optional($.namespace), $.identifier),

    type_variable: $ => $.constant,

    _scope: $ => token("::"),
    namespace: $ => prec.right(2, choice(
      $._scope,
      seq(optional($.namespace), $.constant, $._scope),
    )),

    type_arguments: $ => seq("[", commaSep1($.type), "]"),

    string_literal: $ => choice(
      seq('"', repeat(choice($.double_quote_string_body, $.escape_sequence)), '"'),
      seq('\'', repeat(choice($.single_quote_string_body, $.escape_sequence)), '\''),
    ),

    double_quote_string_body: $ => token(/[^"\\]+/),
    single_quote_string_body: $ => token(/[^'\\]+/),

    symbol_literal: $ => prec.right(choice(
      seq(":\"", repeat(choice($.double_quote_string_body, $.escape_sequence)), "\""),
      seq(":'", repeat(choice($.single_quote_string_body, $.escape_sequence)), "'"),
      /:[a-zA-Z]\w*/,
      seq(/:[a-zA-Z]\w*/, token.immediate("?")),
      seq(/:[a-zA-Z]\w*/, token.immediate("=")),
      /:((\.\.)|(\|)|(\^)|(&)|(<=>)|(==)|(===)|(=~)|(>)|(>=)|(<)|(<=)|(\+)|(-)|(\*)|(\/)|(%)|(!)|(!~)|(\*\*)|(<<)|(>>)|(~)|(\+@)|(-@)|(~@)|(\[\])|(\[\]=)|(`))/,
    )),

    integer_literal: $ => /\d(_?\d)*/,

    // https://ruby-doc.org/core-2.5.0/doc/syntax/literals_rdoc.html#label-Strings
    escape_sequence: $ => token(seq(
      '\\',
      choice(
        /[^ux0-7]/,          // single character
        /x[0-9a-fA-F]{1,2}/, // hex code
        /[0-7]{1,3}/,        // octal
        /u[0-9a-fA-F]{4}/,   // single unicode
        /u\{[0-9a-fA-F ]+\}/,  // multiple unicode
      )
    )),

    proc: $ => seq("^", optional($.parameters), optional($.self_type_binding), optional($.block), "->", $.type),

    _nestable_decls: $ => choice(
      $.class_decl,
      $.module_decl,
      $.class_alias_decl,
      $.module_alias_decl,
      $.interface_decl,
      $.type_alias_decl,
      $.const_decl,
    ),

    class_decl: $ => choice(
      seq(
        "class",
        field("name", $.class_name),
        field("type_parameters", optional($.module_type_parameters)),
        field("superclass", optional($.superclass)),
        field("body", alias(repeat(choice($.member, $._nestable_decls)), $.members)),
        "end"
      )
    ),

    type_alias_decl: $ => seq("type", $.alias_name, optional($.module_type_parameters), "=", $.type),

    const_decl: $ => seq($.const_name, ":", $.type),

    const_name: $ => seq(optional($.namespace), $.constant),

    proc: $ => seq("^", optional($.parameters), optional($.self_type_binding), optional($.block), "->", $.type),

    parameters: $ => seq(
      "(",
      optional(choice(
        alias("?", $.unnamed_parameter),
        seq($.required_positionals),
        seq($.required_positionals, ",", choice($.optional_positionals, $.rest_positional, $.keywords)),
        seq($.required_positionals, ",", $.optional_positionals, ",", choice($.rest_positional, $.trailing_positionals, $.keywords)),
        seq($.required_positionals, ",", $.optional_positionals, ",", $.rest_positional, ",", choice($.trailing_positionals, $.keywords)),
        seq($.required_positionals, ",", $.optional_positionals, ",", $.rest_positional, ",", $.trailing_positionals, ",", $.keywords),
        seq($.required_positionals, ",", $.optional_positionals, ",", $.trailing_positionals, ",", optional($.keywords)),
        seq($.required_positionals, ",", $.rest_positional, ",", choice($.trailing_positionals, $.keywords)),
        seq($.required_positionals, ",", $.rest_positional, ",", $.trailing_positionals, ",", $.keywords),
        seq($.optional_positionals),
        seq($.optional_positionals, ",", choice($.rest_positional, $.trailing_positionals, $.keywords)),
        seq($.optional_positionals, ",", $.rest_positional, ",", choice($.trailing_positionals, $.keywords)),
        seq($.optional_positionals, ",", $.rest_positional, ",", $.trailing_positionals, ",", $.keywords),
        seq($.optional_positionals, ",", $.trailing_positionals, ",", $.keywords),
        seq($.rest_positional),
        seq($.rest_positional, ",", choice($.trailing_positionals, $.keywords)),
        seq($.rest_positional, ",", $.trailing_positionals, ",", $.keywords),
        seq($.keywords),
      )),
      ")"
    ),

    parameter: $ => prec.right(seq($.type, optional($.var_name))),

    required_positionals: $ => seq(commaSep1($.parameter)),

    optional_positionals: $ => seq(commaSep1(seq("?", $.parameter))),

    rest_positional: $ => seq("*", $.parameter),

    trailing_positionals: $ => seq(commaSep1($.parameter)),

    keywords: $ => choice(
      $.splat_keyword,
      prec.right($.required_keywords),
      prec.right($.optional_keywords),
    ),

    splat_keyword: $ => seq("**", $.parameter),
    required_keywords: $ => seq(prec.right(1, seq(alias($.var_name, $.keyword), ":")), $.type, optional(seq(",", $.keywords))),
    optional_keywords: $ => seq(prec.right(1, seq("?", alias($.var_name, $.keyword), ":")), $.type, optional(seq(",", $.keywords))),

    var_name: $ => $.identifier,

    self_type_binding: $ => seq("[", $.self, ":", $.type, "]"),

    block: $ => choice(
      seq("{", $.parameters, optional($.self_type_binding), "->", $.type, "}"),
      seq("?", "{", $.parameters, optional($.self_type_binding), "->", $.type, "}"),
    ),

    method_member: $ => choice(
      seq(optional($.visibility), "def", field("name", $.method_name), ":", $.method_types),
      seq(optional($.visibility), "def", field("name", seq($.self, ".", $.method_name)), ":", $.method_types),
      seq("def", field("name", seq($.self, "?.", $.method_name)), ":", $.method_types),
    ),

    method_type: $ => seq(
      field("type_parameters", optional($.method_type_parameters)),
      field("annotations", alias(repeat($.annotation), $.annotations)),
      field("body", $.method_type_body)),

    method_types: $ => choice(
      sep1($.method_type, "|"),
      "..."
    ),

    method_type_parameters: $ => seq("[", commaSep1($.type_variable), "]"),

    operator: $ => choice(
      '..', '|', '^', '&', '<=>', '==', '===', '=~', '>', '>=', '<', '<=', '+',
      '-', '*', '/', '%', '!', '!~', '**', '<<', '>>', '~', '+@', '-@', '~@', '[]', '[]=', '`'
    ),

    setter: $ => seq($.identifier, token.immediate('=')),
    identifier_suffix: $ => seq($.identifier, token.immediate('?')),
    method_name: $ => choice(
      $.identifier,
      $.identifier_suffix,
      $.constant,
      $.constant_suffix,
      $.setter,
      $.constant_setter,
      $.operator,
      /`[^`]+`/,
    ),

    identifier: $ => token(seq(LOWER_ALPHA_CHAR, IDENTIFIER_CHARS)),
  }
});

function sep1(rule, separator) {
  return seq(rule, repeat(seq(separator, rule)));
}

function commaSep1(rule) {
  return sep1(rule, ',');
}
